@@ -1,3 +1,7 @@
+2015-10-21  Xie XiuQi  <xiexiuqi@huawei.com>
+
+	* dmidecode.c: Handle SMBIOS 3.0 entry points on EFI systems.
+
 2015-10-20  Jean Delvare  <jdelvare@suse.de>
 
 	* dmidecode.c: Handle OEM-specific types in group associations
